--- a/src/components/LogoAndText.scss
+++ b/src/components/LogoAndText.scss
@@ -11,4 +11,20 @@
         font-weight: 700;
         font-size: 1.5em;
     }
+
+    @media (max-width: 1024px) {
+        font-size: 0.9em;
+
+        img {
+            width: 36px;
+        }
+    }
+
+    @media (max-width: 768px) {
+        font-size: 0.8em;
+
+        img {
+            width: 32px;
+        }
+    }
 }
