--- a/src/components/Promotions.scss
+++ b/src/components/Promotions.scss
@@ -1,3 +1,9 @@
+#promotions {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
 .promotions-container {
     box-sizing: border-box;
     width: 100%;
