--- a/src/pages/Transaction.scss
+++ b/src/pages/Transaction.scss
@@ -6,12 +6,25 @@
 
 .transaction-list {
     width: 100%;
-    
     display: flex;
     flex-direction: column;
     gap: 20px;
 
+    box-sizing: border-box;
+    
+
+    //overflow: hidden;
+    transition: height 0.3s ease;
+
     @media (max-width: 768px) {
         gap: 10px;
+    }
+
+    .transaction-container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        width: 100%;
     }
 }
