--- a/src/pages/Account.scss
+++ b/src/pages/Account.scss
@@ -78,3 +78,9 @@
         }
     }
 }
+
+.logout-btn {
+    background-color: #fff;
+    border: 2px solid rgb(244, 38, 25);
+    color: rgb(244, 38, 25);
+}
