--- a/src/pages/Transaction.scss
+++ b/src/pages/Transaction.scss
@@ -27,4 +27,10 @@
 
         width: 100%;
     }
+
+    .show-btn {
+        background: none;
+        color: rgb(244, 38, 25);
+        font-weight: 600;
+    }
 }
