--- a/src/components/InputBox.scss
+++ b/src/components/InputBox.scss
@@ -4,10 +4,14 @@ $theme-grey-color: rgb(217, 217, 217);
     border: solid 2px $theme-grey-color;
     padding: 10px;
     border-radius: 5px;
-    display: grid;
-    grid-template-columns: 50px auto 50px;
-    justify-items: center;
+    // display: grid;
+    // grid-template-columns: 50px auto 50px;
+    // justify-items: center;
+    // align-items: center;
+
+    display: flex;
     align-items: center;
+    gap: 15px;
 
     font-size: 1rem;
     width: 100%;
@@ -17,6 +21,7 @@ $theme-grey-color: rgb(217, 217, 217);
 
     svg {
         color: $theme-grey-color;
+        margin-left: 3%;
     }
 
     .error {
@@ -35,6 +40,7 @@ $theme-grey-color: rgb(217, 217, 217);
         justify-self: stretch;
         font-size: 0.9em;
         box-sizing: border-box;
+        width: 100%;
 
         // Remove default styling on focus
         &:focus {
@@ -75,6 +81,7 @@ $theme-grey-color: rgb(217, 217, 217);
 
     span {
         background: none;
+        margin-right: 5%;
 
         &:hover {
             cursor: pointer;
