--- a/src/pages/Topup.scss
+++ b/src/pages/Topup.scss
@@ -8,13 +8,16 @@
 
     form {
         margin-top: 50px;
-
-        @media (max-width: 768px) {
-            margin-top: 20px;
-        }
+        box-sizing: border-box;
 
         display: flex;
         gap: 20px;
+        
+
+        @media (max-width: 768px) {
+            margin-top: 20px;
+            gap: 0;
+        }
 
         .left,
         .right {
